--- a/Imagery/Makefile
+++ b/Imagery/Makefile
@@ -2,7 +2,7 @@
 CC=gcc
 
 CPPFLAGS= `pkg-config --cflags sdl` -MMD
-CFLAGS= -Wall -Wextra -Werror -std=c99 -O3 -g -fsanitize=address
+CFLAGS= -Wall -Wextra -Werror -std=c99 -O3 -g -fsanitize=address -lm
 LDFLAGS=
 LDLIBS= -lSDL -lpthread -lSDL_image
 
@@ -13,6 +13,6 @@ main: main.o Utils/image.o Utils/op.o Utils/pixel_operations.o Rotations/Rotatio
 	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-	${RM} *.o *.d main test out.png
-                    
+	${RM} *.o *.d main test out.bmp
+
 # END
