--- a/Imagery/Makefile
+++ b/Imagery/Makefile
@@ -13,6 +13,6 @@ main: main.o Utils/image.o Utils/op.o Utils/pixel_operations.o Rotations/Rotatio
 	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-	${RM} *.o *.d main test out.png
+	${RM} *.o *.d main test out.bmp
                     
 # END
