--- a/Imagery/Makefile
+++ b/Imagery/Makefile
@@ -2,12 +2,12 @@
 CC=gcc
 
 CPPFLAGS= `pkg-config --cflags sdl` -MMD
-CFLAGS= -Wall -Wextra -Werror -std=c99 -O3 -g -fsanitize=address
+CFLAGS= -Wall -Wextra -Werror -std=c99 -O3 -g
 LDFLAGS=
 LDLIBS= -lSDL -lpthread -lSDL_image
 
 all: main
-main: main.o Utils/image.o Utils/op.o Utils/pixel_operations.o Preprocessing/noise_reduction.o Color_Treatment/blackandwhite.o Color_Treatment/grayscale.o
+main: main.o Utils/image.o Utils/op.o Utils/pixel_operations.o Preprocessing/noise_reduction.o Color_Treatment/blackandwhite.o Color_Treatment/grayscale.o Utils/array_sort.h
 	$(CC) $^ -o $@ $(LDLIBS)
 %.o: %.c %.h
 	$(CC) $(CFLAGS) -c $< -o $@
