--- a/Imagery/Makefile
+++ b/Imagery/Makefile
@@ -6,6 +6,7 @@ LDLFLAGS = -lcriterion -lm
 LDLIBS = -lSDL -lpthread -lSDL_image 
 
 IMAGE_OBJ = main.o Utils/image.o Utils/op.o Utils/pixel_operations.o Color_Treatment/blackandwhite.o Color_Treatment/grayscale.o Resize/resize.o Rotations/rotations.o
+IMAGE_DEPEND = main.d Utils/image.d Utils/op.d Utils/pixel_operations.d Color_Treatment/blackandwhite.d Color_Treatment/grayscale.d Resize/resize.d Rotations/rotations.d
 
 all: imagery
 
@@ -13,16 +14,4 @@ imagery: $(IMAGE_OBJ)
 	gcc -o $@ $(CFLAGS) $^ $(LDLFLAGS) $(LDLIBS)
 
 clean:
-	${RM} *.o *.d imagery out.bmp
-	
-	${RM} Color_Treatment/*.o
-	${RM} Color_Treatment/*.d
-
-	${RM} Resize/*.o
-	${RM} Resize/*.d
-	
-	${RM} Rotations/*.o
-	${RM} Rotations/*.d
-	
-	${RM} Utils/*.o
-	${RM} Utils/*.d
+	${RM} $(IMAGE_OBJ) $(IMAGE_DEPEND) imagery out.bmp
