--- a/Sudoku_Solver/Makefile
+++ b/Sudoku_Solver/Makefile
@@ -6,6 +6,7 @@ LDLFLAGS = -lcriterion -lm
 LDLIBS = -lSDL -lpthread -lSDL_image 
 
 SUDOKU_OBJ = main.o sudoku_solver.o Sudoku_Printer/sudoku_printer.o Sudoku_Saver/sudoku_saver.o Sudoku_Solvable/sudoku_solvable.o Sudoku_Solved/sudoku_solved.o
+SUDOKU_DEPEND = main.d sudoku_solver.d Sudoku_Printer/sudoku_printer.d Sudoku_Saver/sudoku_saver.d Sudoku_Solvable/sudoku_solvable.d Sudoku_Solved/sudoku_solved.d
 
 all: sudoku
 
@@ -13,16 +14,4 @@ sudoku: $(SUDOKU_OBJ)
 	gcc -o $@ $(CFLAGS) $^ $(LDLFLAGS) $(LDLIBS)
 
 clean:
-	${RM} *.o *.d sudoku
-
-	${RM} Sudoku_Printer/*.o
-	${RM} Sudoku_Printer/*.d
-
-	${RM} Sudoku_Saver/*.o
-	${RM} Sudoku_Saver/*.d
-
-	${RM} Sudoku_Solvable/*.o
-	${RM} Sudoku_Solvable/*.d
-
-	${RM} Sudoku_Solved/*.o
-	${RM} Sudoku_Solved/*.d
+	${RM} $(SUDOKU_OBJ) $(SUDOKU_DEPEND) sudoku
