--- a/Imagery/Makefile
+++ b/Imagery/Makefile
@@ -1,11 +1,11 @@
 CC=gcc
 
 CPPFLAGS = `pkg-config --cflags sdl` -MMD
-CFLAGS = -Wall -Wextra -std=c99 -O1 -g -fsanitize=address 
+CFLAGS =-std=c99 -O1 -g -fsanitize=address
 LDLFLAGS = -lcriterion -lm
 LDLIBS = -lSDL -lpthread -lSDL_image 
 
-IMAGE_OBJ = main.o Utils/image.o Utils/op.o Utils/pixel_operations.o Color_Treatment/blackandwhite.o Color_Treatment/grayscale.o Resize/resize.o Rotations/rotations.o
+IMAGE_OBJ = main.o Utils/image.o Utils/op.o Utils/pixel_operations.o Color_Treatment/blackandwhite.o Color_Treatment/grayscale.o Resize/resize.o Rotations/rotations.o Preprocessing/noise_reduction.o Utils/array_sort.o
 
 all: imagery
 
@@ -23,6 +23,9 @@ clean:
 	
 	${RM} Rotations/*.o
 	${RM} Rotations/*.d
-	
+
+	${RM} Preprocessing/*.o
+	${RM} Preprocessing/*.d
+
 	${RM} Utils/*.o
 	${RM} Utils/*.d
