--- a/NeuralNetwork/Makefile
+++ b/NeuralNetwork/Makefile
@@ -2,7 +2,7 @@ CC = gcc
 
 CPPFLAGS = `pkg-config --cflags sdl` -MMD
 CFLAGS = -Wall -Wextra -std=c99 -O1 -g -fsanitize=address 
-LDLFLAGS = -lcriterion -lm
+LDLFLAGS = -lm
 LDLIBS = -lSDL -lpthread -lSDL_image 
 
 BUILD := build
@@ -11,7 +11,7 @@ XOR_SRC = XOR.c neural_network.c save_load.c
 XOR_OBJ = $(XOR_SRC:%.c=$(BUILD)/%.o)
 XOR_DEP = $(XOR_SRC:%.c=$(BUILD)/%.d)
 
-NN_SRC = main.c neural_network.c save_load.c ../Imagery/Utils/image.c ../Imagery/Utils/pixel_operations.c ../Imagery/Utils/op.c
+NN_SRC = training.c neural_network.c save_load.c ../Imagery/Utils/image.c ../Imagery/Utils/pixel_operations.c ../Imagery/Utils/op.c
 NN_OBJ = $(NN_SRC:%.c=$(BUILD)/%.o)
 NN_DEP = $(NN_SRC:%.c=$(BUILD)/%.d)
 
