Reorganised src, build and makefie

--- a/src/NeuralNetwork/Makefile
+++ b/src/NeuralNetwork/Makefile
@@ -3,15 +3,15 @@ CC = gcc
 CPPFLAGS = `pkg-config --cflags sdl` -MMD
 CFLAGS = -Wall -Wextra -std=c99 -O1 -g -fsanitize=address 
 LDLFLAGS = -lm
-LDLIBS = -lSDL -lpthread -lSDL_image 
+LDLIBS = -lSDL -lSDL_image 
 
 BUILD := build
 
-XOR_SRC = XOR.c neural_network.c save_load.c
+XOR_SRC = main.c XOR.c neural_network.c save_load.c
 XOR_OBJ = $(XOR_SRC:%.c=$(BUILD)/%.o)
 XOR_DEP = $(XOR_SRC:%.c=$(BUILD)/%.d)
 
-NN_SRC = training.c neural_network.c save_load.c ../Imagery/Utils/image.c ../Imagery/Utils/pixel_operations.c ../Imagery/Utils/op.c
+NN_SRC = main.c training.c neural_network.c save_load.c ../Imagery/Utils/op.c ../Imagery/Utils/pixel_operations.c ../Imagery/Utils/image.c
 NN_OBJ = $(NN_SRC:%.c=$(BUILD)/%.o)
 NN_DEP = $(NN_SRC:%.c=$(BUILD)/%.d)
 
@@ -32,8 +32,7 @@ xor: $(XOR_OBJ)
 	gcc -o $@ $(CFLAGS) $^ $(LDLFLAGS)
 
 $(BUILD)/%.o : %.c
-	$(CC) $(CFLAGS) -c $< -o $@
+	$(CC) $(CFLAGS) -c $< -o $@ $(LDLFLAGS) $(CPPFLAGS) $(LDLIBS)
 
 clean:
-	rm -rf $(BUILD)
-	${RM} $(NN_OBJ) $(NN_DEP) $(XOR_OBJ) $(XOR_DEP) xor nn
+	rm -rf $(BUILD) Imagery
