Updated MakeFile, README, AUTHORS

--- a/src/Imagery/Makefile
+++ b/src/Imagery/Makefile
@@ -1,4 +1,4 @@
-CC = gcc
+CC = gcc -I../../include/
 
 CPPFLAGS = `pkg-config --cflags sdl` -MMD
 CFLAGS = -Wall -Wextra -std=c99 -O1 -g -fsanitize=address 
