--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -31,7 +31,6 @@ jobs:
           sudo apt-get update
           sudo apt install libsdl-image1.2 libsdl-image1.2-dev
           bash ./install_criterion.sh
-          git branch --show-current
 
 
       # Runs a set of commands using the runners shell
@@ -40,6 +39,7 @@ jobs:
       - name: Compile Unit Tests
         run:  |
           cd Tests
+          echo `git branch --show-current`
           make
           ls
         
