--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -38,6 +38,7 @@ jobs:
         run: make
       - name: Compile Unit Tests
         run:  |
+          cat ./Makefile
           cd Tests
           make
         
