update noise reduction

--- a/Imagery/Makefile
+++ b/Imagery/Makefile
@@ -2,7 +2,7 @@ CC=gcc
 
 CPPFLAGS = `pkg-config --cflags sdl` -MMD
 CFLAGS =-std=c99 -O1 -g -fsanitize=address
-LDLFLAGS = -lcriterion -lm
+LDLFLAGS = -lm
 LDLIBS = -lSDL -lpthread -lSDL_image 
 
 IMAGE_OBJ = main.o Utils/image.o Utils/op.o Utils/pixel_operations.o Color_Treatment/blackandwhite.o Color_Treatment/grayscale.o Resize/resize.o Rotations/rotations.o Preprocessing/noise_reduction.o Utils/array_sort.o
