add -D__NO_INLINE__ flag

--- a/Tests/Makefile
+++ b/Tests/Makefile
@@ -1,6 +1,6 @@
 CC = gcc -I../include
 
-CPPFLAGS = `pkg-config --cflags sdl` -MMD
+CPPFLAGS = `pkg-config --cflags sdl` -MMD -D__NO_INLINE__
 CFLAGS = -Wall -Wextra -std=c99 -O1 -g -fsanitize=address 
 LDLFLAGS = -lcriterion -lm
 LDLIBS = -lSDL -lpthread -lSDL_image 
