Huge changes, now prepaerly save images, and don't allocate matrix for no reason

--- a/src/Imagery/Makefile
+++ b/src/Imagery/Makefile
@@ -8,6 +8,9 @@ LDLIBS = `pkg-config --libs sdl SDL_image`
 BUILD := build
 EXEC := main
 
+VERBOSE_SRC = ../verbose.c
+VERBOSE_OBJ = $(VERBOSE_SRC:%.c=$(BUILD)/%.o)
+
 SRC =  $(shell find -name "*.c")
 OBJ = $(SRC:%.c=$(BUILD)/%.o)
 DEP = $(SRC:%.c=$(BUILD)/%.d)
@@ -20,13 +23,14 @@ clear:
 init: 
 	$(shell mkdir -p $(BUILD))
 	$(shell mkdir -p $(SRC:%=$(BUILD)/%))
+	$(shell mkdir -p $(VERBOSE_SRC:%.c=$(BUILD)/%))
 
-imagery: $(OBJ)
+imagery: $(OBJ) $(VERBOSE_OBJ)
 	gcc -o $(EXEC) $(CFLAGS) $^ $(LDLFLAGS) $(LDLIBS)
 
 $(BUILD)/%.o : %.c
 	$(CC) $(CFLAGS) -c $< -o $@ $(LDLFLAGS) $(CPPFLAGS) $(LDLIBS)
 
 clean:
-	rm -rf $(BUILD)
+	rm verbose.d verbose.o || rm -rf $(BUILD)
 	$(RM) $(EXEC)
