--- a/src/Sudoku_Solver/Makefile
+++ b/src/Sudoku_Solver/Makefile
@@ -10,6 +10,9 @@ BUILD := build
 IMG_SRC = $(shell find ../Imagery/Utils -name "*.c" ! -name "main.c")
 IMG_OBJ = $(IMG_SRC:%.c=$(BUILD)/%.o)
 
+VERBOSE_SRC = ../verbose.c
+VERBOSE_OBJ = $(VERBOSE_SRC:%.c=$(BUILD)/%.o)
+
 SRC = $(shell find -name "*.c")
 SUDOKU_DEPEND = $(SRC:%.c=$(BUILD)/%.d)
 SUDOKU_OBJ = $(SRC:%.c=$(BUILD)/%.o)
@@ -23,13 +26,14 @@ init:
 	$(shell mkdir -p $(BUILD))
 	$(shell mkdir -p $(SRC:%.c=$(BUILD)/%))
 	$(shell mkdir -p $(IMG_SRC:%.c=$(BUILD)/%))
+	$(shell mkdir -p $(VERBOSE_SRC:%.c=$(BUILD)/%))
 
-solver: $(SUDOKU_OBJ) $(IMG_OBJ)
+solver: $(SUDOKU_OBJ) $(IMG_OBJ) $(VERBOSE_OBJ)
 	gcc -o $@ $(CFLAGS) $^ $(LDLFLAGS) $(LDLIBS)
 
 $(BUILD)/%.o : %.c
 	$(CC) $(CFLAGS) -c $< -o $@ $(LDLFLAGS) $(CPPFLAGS) $(LDLIBS)
 
 clean:
-	rm -rf $(BUILD) Imagery
+	rm verbose.d verbose.o || rm -rf $(BUILD) Imagery
 	${RM} solver *.bmp *.result
