--- a/src/GUI/Makefile
+++ b/src/GUI/Makefile
@@ -2,7 +2,7 @@ CC = gcc -I../../include/
 
 CPPFLAGS = `pkg-config --cflags gtk+-3.0` -MMD -D__NO_INLINE__
 CFLAGS = -Wall -Wextra -std=c99 -O1 -g -fsanitize=address 
-LDLFLAGS = -lm
+LDLFLAGS = -lm -lpthread 
 LDLIBS = `pkg-config --libs gtk+-3.0` -rdynamic
 
 BUILD := build
