--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Installing dependencies 
         run:  |
           sudo apt-get update
-          sudo apt install libsdl-image1.2 libsdl-image1.2-dev
+          sudo apt install libsdl-image1.2 libsdl-image1.2-dev libgtk-3-dev
           bash ./install_criterion.sh
 
 
